<resources>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="log_in">Login</string>
    <string name="log_in_facebook">Log in with Facebook</string>
    <string name="app_name">Fripple</string>
    <string name="fb_id">432155433628542</string>
    <string name="uname_hint">Username</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="pword_hint">Password</string>
    <string name="confirm_pword_hint">Confirm Password</string>
</resources>
