<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/title_holder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:background="@color/FormalDarkBlue"
        android:gravity="center">

        <com.missions.fripple.activities.custom.CommonTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="25dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="15dp">

        <com.missions.fripple.activities.custom.CommonTextView
            android:id="@+id/create_acct_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="Create Account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/textbox_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_acct_title"
            android:orientation="vertical">

            <com.missions.fripple.activities.custom.CommonEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/uname_hint"
                android:layout_marginTop="4dp"
                android:padding="@dimen/dp_10"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/divider" />

            <com.missions.fripple.activities.custom.CommonEditText
                android:id="@+id/realname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/name_hint"
                android:layout_marginTop="4dp"
                android:padding="@dimen/dp_10"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/divider" />


            <com.missions.fripple.activities.custom.CommonEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:hint="@string/pword_hint"
                android:padding="@dimen/dp_10"
                android:password="true" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/divider" />


            <com.missions.fripple.activities.custom.CommonEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:hint="@string/confirm_pword_hint"
                android:padding="@dimen/dp_10"
                android:password="true" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/divider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textbox_holder"
            android:layout_alignRight="@id/textbox_holder"
            android:layout_below="@id/textbox_holder"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.missions.fripple.activities.custom.CommonButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_rounded_gray"
                android:text="@string/register"
                android:textColor="@color/white" />


            <com.missions.fripple.activities.custom.CommonButton
                android:id="@+id/btn_signup_fb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textbox_holder"
                android:layout_alignRight="@id/textbox_holder"
                android:layout_weight="0.5"
                android:background="@drawable/button_fb_login_bg"
                android:drawableLeft="@drawable/fb_logo"
                android:paddingLeft="@dimen/dp_10"
                android:text="via Facebook"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>